--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@types/next": "^9.0.0",
+    "@types/react": "^18.2.29",
+    "bootstrap": "^5.3.2",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^10.3.1"
+    "react-id-swiper": "^4.0.0",
+    "styled-components": "^6.1.0",
+    "swiper": "^10.3.1",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0"
   }
 }
