--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.13",
     "@types/next": "^9.0.0",
     "@types/react": "^18.2.29",
+    "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "next": "13.5.5",
     "react": "^18",
@@ -21,6 +22,7 @@
     "react-id-swiper": "^4.0.0",
     "styled-components": "^6.1.0",
     "swiper": "^10.3.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
