--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
@@ -16,6 +17,7 @@
     "@types/react": "^18.2.29",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
+    "graphql": "^16.8.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
