--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
     /* Language and Environment */
-     
+    
+        "module": "ESNext",
+        "target": "ESNext",
+        
       "baseUrl": ".",
       "paths": {
         "@/styles/*": ["path/to/styles/*"]
